# UCF-Chip-3

./: Cargo.toml  README.md
.github/workflows/: ci.yml
config/: class_thresholds.yaml  deployment_map.yaml  receipt_gate_policy.yaml  regulator_overlays.yaml  regulator_profiles.yaml  regulator_update_tables.yaml  tool_registry.yaml  windowing.yaml
crates/app/: Cargo.toml
crates/app/src/: main.rs
crates/app/tests/: forbidden_identifiers.rs  local_pvgs_e2e.rs
crates/app/tests/common/: mod.rs
crates/cdm/: Cargo.toml
crates/cdm/src/: emotion.rs  lib.rs
crates/chip2_client/: Cargo.toml
crates/chip2_client/src/: lib.rs
crates/ckm_client/: Cargo.toml
crates/ckm_client/src/: lib.rs
crates/ckm_orchestrator/: Cargo.toml
crates/ckm_orchestrator/src/: lib.rs
crates/control/: Cargo.toml
crates/control/src/: lib.rs
crates/engine/: Cargo.toml
crates/engine/src/: classify.rs  config.rs  lib.rs  regulation.rs
crates/frames/: Cargo.toml
crates/frames/src/: emotion.rs  lib.rs
crates/geist_stub/: Cargo.toml
crates/geist_stub/src/: lib.rs
crates/gem/: Cargo.toml
crates/gem/src/: inflight.rs  lib.rs
crates/gem/tests/: inflight.rs  receipt_binding.rs
crates/lnss_frames_bridge/: Cargo.toml
crates/lnss_frames_bridge/src/: lib.rs
crates/pbm/: Cargo.toml
crates/pbm/src/: lib.rs
crates/pvgs_client/: Cargo.toml
crates/pvgs_client/src/: lib.rs
crates/pvgs_verify/: Cargo.toml
crates/pvgs_verify/src/: lib.rs
crates/replay_orchestrator/: Cargo.toml
crates/replay_orchestrator/src/: lib.rs
crates/rpp_checker/: Cargo.toml
crates/rpp_checker/src/: lib.rs
crates/scheduler/: Cargo.toml
crates/scheduler/src/: lib.rs
crates/suspension/: Cargo.toml
crates/suspension/src/: lib.rs
crates/tam/: Cargo.toml
crates/tam/src/: lib.rs
crates/test-utils/: Cargo.toml
crates/test-utils/src/: lib.rs
crates/tom/: Cargo.toml
crates/tom/src/: lib.rs
crates/trm/: Cargo.toml
crates/trm/src/: lib.rs
crates/ucf-protocol/: Cargo.toml
crates/ucf-protocol/src/: lib.rs
crates/wire/: Cargo.toml
crates/wire/src/: lib.rs
docs/: architecture.md
experimental/lnss/: Cargo.toml  README.md
experimental/lnss/crates/chip2/: Cargo.toml
experimental/lnss/crates/chip2/src/: lib.rs
experimental/lnss/crates/lnss_approval/: Cargo.toml
experimental/lnss/crates/lnss_approval/src/: lib.rs
experimental/lnss/crates/lnss_assets/: Cargo.toml
experimental/lnss/crates/lnss_assets/src/: lib.rs
experimental/lnss/crates/lnss_bluebridge/: Cargo.toml
experimental/lnss/crates/lnss_bluebridge/src/: lib.rs
experimental/lnss/crates/lnss_bluebridge/tests/: chip2_injection.rs
experimental/lnss/crates/lnss_core/: Cargo.toml
experimental/lnss/crates/lnss_core/src/: lib.rs
experimental/lnss/crates/lnss_evolve/: Cargo.toml
experimental/lnss/crates/lnss_evolve/src/: lib.rs  trace_encoding.rs
experimental/lnss/crates/lnss_hooks/: Cargo.toml
experimental/lnss/crates/lnss_hooks/src/: lib.rs
experimental/lnss/crates/lnss_lifecycle/: Cargo.toml
experimental/lnss/crates/lnss_lifecycle/src/: lib.rs
experimental/lnss/crates/lnss_mechint/: Cargo.toml
experimental/lnss/crates/lnss_mechint/src/: lib.rs
experimental/lnss/crates/lnss_rig/: Cargo.toml
experimental/lnss/crates/lnss_rig/src/: lib.rs
experimental/lnss/crates/lnss_rlm/: Cargo.toml
experimental/lnss/crates/lnss_rlm/src/: lib.rs
experimental/lnss/crates/lnss_runtime/: Cargo.toml
experimental/lnss/crates/lnss_runtime/src/: lib.rs
experimental/lnss/crates/lnss_runtime/tests/: approval_activation.rs  candle_backend.rs  cfg_root_digest.rs  followup_budget.rs  liquid_backend.rs  proposal_inbox.rs  real_sae_backend.rs  runtime_determinism.rs  shadow_mode.rs  trace_evidence.rs  world_modulation.rs
experimental/lnss/crates/lnss_sae/: Cargo.toml
experimental/lnss/crates/lnss_sae/src/: lib.rs  real.rs
experimental/lnss/crates/lnss_sae/tests/: real_backend.rs
experimental/lnss/crates/lnss_triggers/: Cargo.toml
experimental/lnss/crates/lnss_triggers/src/: lib.rs
experimental/lnss/crates/lnss_worldmodel/: Cargo.toml
experimental/lnss/crates/lnss_worldmodel/src/: lib.rs
experimental/lnss/crates/lnss_worldmodulation/: Cargo.toml
experimental/lnss/crates/lnss_worldmodulation/src/: lib.rs
experimental/lnss/docs/: determinism.md  evidence.md  interfaces.md  overview.md  roadmap.md
experimental/lnss/src/: lib.rs
experimental/lnss/tests/: bluebridge_injection.rs  feedback_loop.rs
experimental/lnss/testvectors/: tap_plan.json
tests/: Cargo.toml  README.md  proto_smoke.rs  pvgs_smoke.rs
tests/chip4-pvgs/: Cargo.toml
tests/chip4-pvgs/src/: lib.rs
tests/tests/: proto_smoke.rs  pvgs_smoke.rs
