[package]
name = "app"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
thiserror = { workspace = true }
gem = { path = "../gem" }
pbm = { path = "../pbm" }
tam = { path = "../tam" }
ucf-protocol = { workspace = true }
frames = { path = "../frames" }
control = { path = "../control" }
hex = "0.4"
pvgs_verify = { path = "../pvgs_verify" }
pvgs_client = { path = "../pvgs_client" }
ed25519-dalek = "2"
trm = { path = "../trm" }
ckm_orchestrator = { path = "../ckm_orchestrator" }

[dev-dependencies]
chip4-pvgs = { path = "../../tests/chip4-pvgs" }
ucf-test-utils = { path = "../test-utils" }
