[package]
name = "app"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
thiserror = { workspace = true }
gem = { path = "../gem" }
pbm = { path = "../pbm" }
tam = { path = "../tam" }
ucf-protocol = { workspace = true }
frames = { path = "../frames" }
control = { path = "../control" }
hex = "0.4"
lnss_frames_bridge = { path = "../lnss_frames_bridge" }
pvgs_verify = { path = "../pvgs_verify" }
pvgs_client = { path = "../pvgs_client" }
scheduler = { path = "../scheduler" }
ed25519-dalek = "2"
trm = { path = "../trm" }
ckm_orchestrator = { path = "../ckm_orchestrator" }
lnss_runtime = { path = "../../experimental/lnss/crates/lnss_runtime", optional = true }
lnss_sae = { path = "../../experimental/lnss/crates/lnss_sae", optional = true }
lnss_hooks = { path = "../../experimental/lnss/crates/lnss_hooks", optional = true }
lnss_mechint = { path = "../../experimental/lnss/crates/lnss_mechint", optional = true }
lnss_rig = { path = "../../experimental/lnss/crates/lnss_rig", optional = true }
lnss_core = { path = "../../experimental/lnss/crates/lnss_core", optional = true }
lnss_rlm = { path = "../../experimental/lnss/crates/lnss_rlm", optional = true }
lnss_worldmodel = { path = "../../experimental/lnss/crates/lnss_worldmodel", optional = true }
lnss_lifecycle = { path = "../../experimental/lnss/crates/lnss_lifecycle", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }

[dev-dependencies]
chip4-pvgs = { path = "../../tests/chip4-pvgs" }
ucf-test-utils = { path = "../test-utils" }
walkdir = "2"

[features]
default = []
lnss = [
    "lnss_runtime",
    "lnss_sae",
    "lnss_hooks",
    "lnss_mechint",
    "lnss_rig",
    "lnss_core",
    "lnss_rlm",
    "lnss_worldmodel",
    "lnss_lifecycle",
    "serde",
    "serde_json",
]
lnss-candle = [
    "lnss_runtime/lnss-candle",
    "lnss_hooks/lnss-candle",
    "lnss_sae/lnss-candle",
]
lnss-sae-real = ["lnss_sae/lnss-sae-real", "lnss-candle"]
