[package]
name = "frames"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
thiserror = { workspace = true }
blake3 = { workspace = true }
ucf-protocol = { workspace = true }
pbm = { path = "../pbm" }
cdm = { path = "../cdm" }
chip2_client = { path = "../chip2_client" }
lnss_frames_bridge = { path = "../lnss_frames_bridge" }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"

[dev-dependencies]
tempfile = "3"
serde_json = "1"
