[package]
name = "lnss_approval"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
lnss_core = { path = "../lnss_core" }
lnss_evolve = { path = "../lnss_evolve" }
serde = { workspace = true }
hex = { workspace = true }
prost = { workspace = true }
thiserror = { workspace = true }
ucf-protocol = { path = "../../../../crates/ucf-protocol" }
