[package]
name = "lnss_approval"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[features]
default = []
lnss-legacy-evidence = []

[dependencies]
lnss_core = { path = "../lnss_core" }
lnss_evolve = { path = "../lnss_evolve" }
ucf-protocol = { path = "../../../../crates/ucf-protocol" }
hex = { workspace = true }
prost = "0.12"
thiserror = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
