[package]
name = "lnss_rig"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[features]
default = []
lnss-rig-sdk = []

[dependencies]
lnss_runtime = { path = "../lnss_runtime" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
