[package]
name = "lnss_runtime"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[features]
default = []
lnss-burn = ["burn"]
lnss-candle = []
lnss-liquid-ode = ["lnss-burn"]

[dependencies]
lnss_core = { path = "../lnss_core" }
lnss_hooks = { path = "../lnss_hooks" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
burn = { version = "0.12", default-features = false, optional = true }

[dev-dependencies]
lnss_hooks = { path = "../lnss_hooks" }
lnss_sae = { path = "../lnss_sae" }
lnss_mechint = { path = "../lnss_mechint" }
lnss_rig = { path = "../lnss_rig" }
