[package]
name = "lnss_runtime"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[features]
default = []
lnss-burn = ["burn", "bincode"]
lnss-candle = []
lnss-liquid-ode = ["lnss-burn"]
lnss-chip4-query = ["lnss_lifecycle/lnss-chip4-query"]

[dependencies]
lnss_core = { path = "../lnss_core" }
lnss_worldmodulation = { path = "../lnss_worldmodulation" }
lnss_worldmodel = { path = "../lnss_worldmodel" }
lnss_rlm = { path = "../lnss_rlm" }
lnss_approval = { path = "../lnss_approval" }
lnss_evolve = { path = "../lnss_evolve" }
lnss_triggers = { path = "../lnss_triggers" }
lnss_hooks = { path = "../lnss_hooks" }
lnss_lifecycle = { path = "../lnss_lifecycle" }
pvgs_client = { path = "../../../../crates/pvgs_client" }
ucf-protocol = { path = "../../../../crates/ucf-protocol" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }
prost = "0.12"
burn = { version = "0.12", default-features = false, optional = true }
bincode = { version = "=2.0.0-rc.3", features = ["serde"], optional = true }

[dev-dependencies]
chip2 = { path = "../chip2" }
lnss_hooks = { path = "../lnss_hooks" }
lnss_sae = { path = "../lnss_sae", features = ["lnss-sae-real"] }
lnss_mechint = { path = "../lnss_mechint" }
lnss_rig = { path = "../lnss_rig" }
