[package]
name = "lnss_sae"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[features]
default = []
lnss-candle = []
lnss-sae-real = ["lnss-candle", "candle-core", "half", "serde", "serde_json", "thiserror"]

[dependencies]
lnss_core = { path = "../lnss_core" }
lnss_runtime = { path = "../lnss_runtime" }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
thiserror = { workspace = true, optional = true }
candle-core = { version = "0.9.1", optional = true }
half = { version = "2", default-features = false, features = ["std"], optional = true }
